# MLOps_g22_2024

./: .gitignore  Makefile  README.md  cloudbuild.yaml  cuda.py  pyproject.toml  requirements.txt  requirements_dev.txt  trainer.dockerfile.txt
.dvc/: config
.github/workflows/: ruff.yml  tests.yml
data/: raw.dvc
data/pytest_data/: test.txt  train.txt  val.txt
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mlops_g22_2024/: __init__.py  fast_api.py  fastapi.py  predict_model.py  train_model.py
mlops_g22_2024/config/: config.yaml
mlops_g22_2024/config/train/: train_config.yaml
mlops_g22_2024/data/: make_dataset.py
mlops_g22_2024/models/: baseline_model.py  model.py
reports/: README.md
tests/: __init__.py  copy_txt.py  test_make_dataset.py  test_model.py  test_train_model.py
workflows/: tests.yml
